--- a/templates/view_courses.html
+++ b/templates/view_courses.html
@@ -1,20 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>View Courses</title>
-</head>
-<body>
-    <h1>Courses List</h1>
-    <ul>
-        {% for course in courses %}
-            <li>
-                <strong>{{ course.title }}</strong> - {{ course.description }}
-                <!-- You can add more details here -->
-            </li>
-        {% else %}
-            <li>No courses available.</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1>Courses</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Course ID</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Edit</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for course in courses %}
+                <tr>
+                    <td>{{ course.id }}</td>
+                    <td>{{ course.title }}</td>
+                    <td>{{ course.description }}</td>
+                    <td><a href="{{ url_for('edit_course', course_id=course.id) }}">Edit</a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% endblock %}
