--- a/templates/create_new_course.html
+++ b/templates/create_new_course.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Create New Course{% endblock %}
-{% block style %}
+{% block stylesheets %}
+<style>
 body {
     font-family: Arial, sans-serif;
 }
@@ -38,6 +39,7 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+</style>
 {% endblock %}
 
 {% block content %}
