--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Admin Dashboard{% endblock %}</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <style>{% block style %}{% endblock %}</style>
-    <script> {% block code %}{% endblock %}</script>
+    {% block stylesheets %}{% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,7 +49,7 @@
                 <div class="breadcrumb">
                     {% block breadcrumb %}{% endblock %}
                 </div>
-                <div class="content">
+                <div class="content container-fluid-2">
                     {% block content %}{% endblock %}
                 </div>
             </main>
@@ -60,6 +59,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    
+    {% block script %}{% endblock %}   
 </body>
 </html>
