--- a/templates/404.html
+++ b/templates/404.html
@@ -1,14 +1,8 @@
-<!-- templates/404.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found</title>
-</head>
-<body>
-    <h1>404 Not Found</h1>
-    <p>Sorry, the page you are looking for does not exist.</p>
-    <a href="{{ url_for('admin') }}">Go back to the homepage</a>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}404 Not found{% endblock %}
+{% block content %}
+
+<h1>We are working on it</h1>
+<p>Coming Soon</p>
+
+{% endblock %}
